# launch-template-terraform-prototype

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  copier.yml  pyproject.toml
template/: .gitignore.jinja  .golangci.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .secrets.baseline.jinja  .terraform-docs.yml  .tool-versions  .tool-versions.jinja  Makefile.jinja  NOTICE.jinja  README.md.jinja  go.mod.jinja  main.tf.jinja  outputs.tf.jinja  variables.tf.jinja  versions.tf.jinja
template/_mixins/: .gitignore.jinja  .pre-commit-config.yaml.jinja  .tool-versions.jinja
template/examples/minimal/: README.md  locals.tf.jinja  main.tf.jinja  outputs.tf.jinja  test.tfvars.jinja  variables.tf.jinja  versions.tf.jinja
template/test/: conftest.py  test_template.py
template/tests/post_deploy_functional/: main_test.go.jinja
template/tests/post_deploy_functional_readonly/: main_test.go.jinja
template/tests/testimpl/: test_impl.go.jinja  types.go.jinja
template_collection/_provider/hashicorp/: variables.tf.jinja
template_primitive/: README.md.jinja  main.tf.jinja  outputs.tf.jinja  variables.tf.jinja
template_primitive/_provider/hashicorp/aws/: README.md.jinja  main.tf.jinja  outputs.tf.jinja
template_primitive/_provider/hashicorp/azurerm/: README.md.jinja  main.tf.jinja  outputs.tf.jinja  (+1 more)
template_primitive/examples/minimal/: main.tf.jinja  outputs.tf.jinja  test.tfvars.jinja  variables.tf.jinja
template_reference/_provider/hashicorp/: variables.tf.jinja
test/: conftest.py  test_template.py
(+7 files in other folders)
